--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/yakupkalayci/schoolManagement-JS#readme",
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.2"
+    "bootstrap": "^5.3.2",
+    "firebase": "^10.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
